Changed source group for header files in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(HEADERS
     word.h
 )
 
-source_group("Headers" FILES ${HEADERS})
+source_group("Header Files" FILES ${HEADERS})
 
 find_package(Boost 1.47.0 REQUIRED)
 find_package(OpenGL REQUIRED)
